<resources>
    <string name="app_name">Animesutā</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="no_data">Empty data</string>

    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae eaque iste nobis non quasi ratione veritatis. Accusantium assumenda, cum delectus deserunt dignissimos doloribus ea error esse et ex explicabo fuga ipsa ipsum omnis optio perferendis provident quaerat quam sequi unde? At deleniti dignissimos exercitationem iure officiis perspiciatis rerum tenetur, vitae?</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="title_favorite">Favorite</string>
    <string name="animesuta_jp">アニメスター</string>
    <string name="details">Details</string>
    <string name="synopsis">Synopsis</string>
</resources>